# maester

./: .gitignore  LICENSE  README.md  benchmark_parallelism.py  infer.py  job_manager.py  log2csv.py  mup_coord_check.py  nccl_preflight.py  plot.yaml  pyproject.toml  rccl-tests.sh  submit.py  sweep.py  sweep_config.py  tokenizer_train.py  train.py  umup.py
configs/: config.toml  dataset.toml
configs/gemma3/: 12b-base.toml  1b-mps.toml
configs/llama/: munin-7b-core-pt-dp.toml
configs/munin/: comma-1b.toml  core-stage1.toml  core-stage2.toml  open-stage0-1k.toml  open-stage0-32k.toml  open-stage0-4k.toml  open-stage0.toml  open-stage01-4k.toml  open-stage1-125.toml  open-stage1-16k.toml  open-stage1-1k.toml  open-stage1-250.toml  open-stage1-2k.toml  open-stage1-32k.toml  open-stage1-32kn.toml  open-stage1-4k.toml  open-stage1-4kn.toml  open-stage1-500.toml  open-stage1-64k.toml  open-stage1-8k.toml  open-stage1.toml  open-stage2-1k.toml  open-stage2.toml  open-stage3.toml  open.toml  test.toml
maester/: __init__.py  checkpoint.py  config.py  data_monitor.py  log_utils.py  lr_scheduling.py  memory.py  metrics.py  mps.py  optimizers.py  parallelize_llama.py  profiling.py  utils.py
maester/datasets/: __init__.py  base.py  dataloader.py  experimental.py  experimental_otf.py  jinx_dataset.py  seqio.py  stateful.py
maester/datasets/formats/: __init__.py  jinx.py  parquet.py
maester/datasets/tokenizer/: __init__.py  tiktoken.py
maester/models/: __init__.py  freezing.py  norms.py
maester/models/deepseek/: __init__.py  args.py  attention.py  expert_parallel.py  model.py  moe.py  moe_indices.py  optimizer.py
maester/models/gemma/: __init__.py  model.py
maester/models/glm4/: __init__.py  model.py
maester/models/hf/: modeling_mup_llama.py
maester/models/llama/: __init__.py  model.py  tied_linear.py
maester/models/moe/: __init__.py  kernels.py  moe.py  utils.py
maester/models/umup/: __init__.py  model.py  registry.py  unit_scaling_patch.py
maester/optimizers/: __init__.py  container.py  muon.py
maester/optimizers/muon_/: newton_schulz.py  syrk.py
maester/parallelisms/: __init__.py  expert_parallel.py  parallel_dims.py  parallelize_deepseek.py  parallelize_gemma.py  parallelize_glm4.py  parallelize_llama.py  simple_fsdp.py
maester/sft/: __init__.py  dataset.py  messages.py  packed_dataset.py  templates.py  tokenization.py
maester/upgrades/: __init__.py  gqa.py
plots/: lrtransfer.py  mutransfer.py
scripts/: chat_tui.py  compute_mla_rank.py  convert_dcp_to_hf.py  convert_gemma_from_dcp.py  convert_gemma_to_dcp.py  convert_hf.py  convert_mup_to_hf.py  convert_to_gqa.py  convert_to_mla.py  count_tokens.py  estimate_tokens.py  eval_perplexity.py  fsdp_hybrid.py  fsdp_tp.py  generate.py  generate_fake_data.py  generate_hf.py  hf_convo_to_parquet.py  hf_to_arrow.py  inspect_packed_data.py  inspect_parquet.py  jsonl_convo_to_parquet.py  jsonl_convo_to_parquet_.py  jsonl_to_arrow.py  jsonl_to_parquet.py  make_venv.sh  pack_sft_data.py  parquet_sampler.py  random_dataset_sample.py  rccl-tests.sh  shuffle_split_parquet.py  submit_eval.py  test_arrow.py
scripts/convert/deepseek/: from_dcp.py  to_dcp.py
scripts/convert/gemma/: from_dcp.py  to_dcp.py
scripts/convert/glm4/: from_dcp.py  to_dcp.py
scripts/convert/llama/: from_dcp.py  from_dcp_yarn.py  hf_maester_llama.py  to_dcp.py
scripts/convert/mup_llama/: from_dcp.py
scripts/slurm/: in_container.sh  slurm.sh  slurm_new.sh
src/maester/: checkpoint.py  config.py  log_utils.py  lr_scheduling.py  memory.py  metrics.py  model.py  parallelize_llama.py  profiling.py  utils.py
src/maester/datasets/: __init__.py  dataloader.py  download_tokenizer.py  experimental.py  experimental_otf.py  hf_datasets.py  mosaic_dataset.py
src/maester/datasets/tokenizer/: sentencepiece.py
src/maester/models/: __init__.py  flash_attn_op.py  norms.py
src/maester/models/llama/: __init__.py  model.py
src/maester/parallelisms/: __init__.py  parallelize_llama.py
templates/: slurm.sh
tests/: test_checkpoint.py  test_datasets.py  test_experimental_otf.py  test_experimental_otf_regression.py  test_experimental_otf_state_machine.py  test_flash_attn_op.py  test_gqa_conversion.py  test_model.py  test_model_gemma.py  test_model_glm4.py  test_model_llama.py  test_model_mistral.py  test_packed_attention.py  test_packed_sft.py  test_rope.py  test_sft.py
