[project]
name = "maester"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rasmus Larsen", email = "rasmus.larsen@alexandra.dk" }
]
dependencies = [
    "torch>=2.5",
    "transformers>=4.47.1",
    # "hydra-core>=1.3.2",
    "datasets>=2.16.0",
    # "pandas>=2.0,<2.2",
    "numpy<2",
    "matplotlib>=3.8.4",
    "wandb>=0.16.6",
    "schedulefree>=1.2.5",
    "tiktoken",
    "blobfile",
    "sentencepiece",
    "pydantic",
    # "mosaicml-streaming",
    "tensorboard",
    # "distributed-shampoo",
    "pydantic-settings>=2.6.0",
    # "pytorch-triton-rocm",
    "torchvision",
    "torchdata",
    "scandeval",
    "triton",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maester"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm6.2"
explicit = true

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = ["missing-class-docstring"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
distributed-shampoo = { git = "https://github.com/facebookresearch/optimizers.git" }
torch = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]
torchdata = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]
triton = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]