[project]
name = "maester"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Rasmus Larsen", email = "rasmus.larsen@alexandra.dk" }
]
dependencies = [
    "torch>=2.6",
    "transformers>=4.47.1",
    "datasets>=2.16.0",
    "numpy",
    "matplotlib>=3.8.4",
    "wandb>=0.16.6",
    "schedulefree>=1.2.5",
    "tiktoken",
    "blobfile",
    "sentencepiece",
    "pydantic",
    "tensorboard",
    # "distributed-shampoo",
    "pydantic-settings>=2.6.0",
    # "pytorch-triton-rocm",
    # "torchvision",
    # "torchdata",
    # "scandeval",
    # "triton",
    "cut-cross-entropy"
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["maester/"]

[tool.uv]
conflicts = [
    #[
    #    { extra = "rocm" },
    #    { extra = "cuda" }
    #],
    [
        { extra = "rocm" },
        { extra = "inference" }
    ]
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/nightly/cu124"
explicit = true

[project.optional-dependencies]
rocm = [
    "torch",
    "torchvision",
    "torchdata",
    "triton",
    "pytorch-triton-rocm"
]
# cuda = [
#     "torch",
#     "torchvision",
#     "torchdata",
#     "triton"
# ]
# inference = [
#     "scandeval",
#     "vllm",
#     "scandeval",
#     "xformers>=0.0.28",
# ]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = ["missing-class-docstring"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
distributed-shampoo = { git = "https://github.com/facebookresearch/optimizers.git" }
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
torch = [
    { index = "pytorch-rocm", extra = "rocm" },
    #{ index = "pytorch-cuda", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-rocm", extra = "rocm" },
    #{ index = "pytorch-cuda", extra = "cuda" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" },
]
torchdata = [
    { index = "pytorch-rocm", extra = "rocm" },
    #{ index = "pytorch-cuda", extra = "cuda" },
]
# triton = [
#     { index = "pytorch-rocm", extra = "rocm" },
#     { index = "pytorch-cuda", extra = "cuda" },
# ]