[project]
name = "maester"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Rasmus Larsen", email = "rasmus.larsen@alexandra.dk" }
]
readme = "README.md"
requires-python = ">= 3.11, <3.12"

# Base deps (Linux CPU-only works from PyPI)
dependencies = [
    "torch>=2.7",
    "transformers>=4.54.0",
    "datasets>=2.16.0",
    "numpy<2",
    "matplotlib>=3.8.4",
    "wandb>=0.16.6",
    "schedulefree>=1.2.5",
    "tiktoken",
    "blobfile",
    "sentencepiece",
    "pydantic",
    "tensorboard",
    "pydantic-settings[toml]>=2.6.0",
    "triton>=3", # OpenAI Triton (PyPI). Not the same as pytorch-triton.
    "cut-cross-entropy",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["maester/"]

# ────────────────────────── uv (Linux-only) ──────────────────────────
[tool.uv]
# Only solve for Linux.
environments = ["sys_platform == 'linux'"]

# Prevent mixing CUDA/ROCm and stable/nightly.
conflicts = [
  [ { extra = "cuda" },         { extra = "cuda-nightly" } ],
  [ { extra = "rocm" },         { extra = "rocm-nightly" } ],
  [ { extra = "cuda" },         { extra = "rocm" } ],
  [ { extra = "cuda" },         { extra = "rocm-nightly" } ],
  [ { extra = "cuda-nightly" }, { extra = "rocm" } ],
  [ { extra = "cuda-nightly" }, { extra = "rocm-nightly" } ],
]

# PyTorch indices (stable + nightly)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63-nightly"
url = "https://download.pytorch.org/whl/nightly/rocm6.3"
explicit = true

# Route packages to indices only when the matching extra is selected
[tool.uv.sources]
# Git sources
distributed-shampoo = { git = "https://github.com/facebookresearch/optimizers.git" }
cut-cross-entropy   = { git = "https://github.com/apple/ml-cross-entropy.git" }

# Core PyTorch
torch = [
  { index = "pytorch-cu128",          extra = "cuda" },
  { index = "pytorch-cu128-nightly",  extra = "cuda-nightly" },
  { index = "pytorch-rocm63",         extra = "rocm" },
  { index = "pytorch-rocm63-nightly", extra = "rocm-nightly" },
]

# Companions
torchvision = [
  { index = "pytorch-cu128",          extra = "cuda" },
  { index = "pytorch-cu128-nightly",  extra = "cuda-nightly" },
  { index = "pytorch-rocm63",         extra = "rocm" },
  { index = "pytorch-rocm63-nightly", extra = "rocm-nightly" },
]

torchdata = [
  { index = "pytorch-cu128",          extra = "cuda" },
  { index = "pytorch-cu128-nightly",  extra = "cuda-nightly" },
  { index = "pytorch-rocm63",         extra = "rocm" },
  { index = "pytorch-rocm63-nightly", extra = "rocm-nightly" },
]

# PyTorch's Triton runtime wheels
pytorch-triton = [
  { index = "pytorch-cu128",          extra = "cuda" },
  { index = "pytorch-cu128-nightly",  extra = "cuda-nightly" },
]

pytorch-triton-rocm = [
  { index = "pytorch-rocm63",         extra = "rocm" },
  { index = "pytorch-rocm63-nightly", extra = "rocm-nightly" },
]

# ────────────────────────── Linting / typing ──────────────────────────
[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = ["missing-class-docstring"]

[tool.pyright]
venvPath = "."
venv = ".venv"

# ────────────────────────── Optional dependency groups ──────────────────────────
# IMPORTANT: Any package gated by `tool.uv.sources` + `extra=...` must also appear here.

[project.optional-dependencies]
# CUDA 12.8 (stable)
cuda = [
    "torch>=2.7",
    "torchvision",
    "torchdata",
    "pytorch-triton==3.3.0",
    "triton==3.3.1"
]

# CUDA 12.8 (nightly)
cuda-nightly = [
    "torch>=2.7",
    "torchvision",
    "torchdata",
    "pytorch-triton",
]

# ROCm 6.3 (stable)
rocm = [
    "torch>=2.7",
    "torchvision",
    "torchdata",
    "pytorch-triton-rocm",
    "liger-kernel",
]

# ROCm 6.3 (nightly)
rocm-nightly = [
    "torch>=2.7",
    "torchvision",
    "torchdata",
    "pytorch-triton-rocm",
    "liger-kernel",
]
